src/objects/E2_Estimate_Milestone_Week__c.object
<CustomObject>
    <description>Junction object between Estimate Milestone and Estimate Week. Used in Estimator 2.0 App</description>
    <fields>
        <fullName>Estimate_Milestone__c</fullName>
        <label>Estimate Milestone</label>
        <referenceTo>E2_Estimate_Milestone__c</referenceTo>
        <relationshipLabel>Estimate Milestone Weeks</relationshipLabel>
        <relationshipName>Estimate_Milestone_Weeks</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Estimate_Week__c</fullName>
        <label>Estimate Week</label>
        <referenceTo>CMC_Estimate_Week__c</referenceTo>
        <relationshipLabel>Estimate Milestone Weeks</relationshipLabel>
        <relationshipName>Estimate_Milestone_Weeks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TextColorCode__c</fullName>
        <description>Stores the hex color code for the milestone descriptions</description>
        <label>TextColorCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <description>Field stores the text value milestone description</description>
        <label>Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Estimate Milestone Week</label>
    <nameField>
        <displayFormat>EMW-{0000000000}</displayFormat>
        <label>Estimate Milestone Week Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Estimate Milestone Weeks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>